# FastRenderer

./: .clangd  .gitignore  CMakeLists.txt  Makefile
include/imgui/: CMakeLists.txt  Makefile
res/shaders/: frag.glsl  vert.glsl
res/shaders/blinnPhong/: frag.glsl  vert.glsl
res/shaders/blinnPhongMat/: frag.glsl
res/shaders/quad/: frag.glsl  vert.glsl
res/shaders/reflect/: frag.glsl  vert.glsl
res/shaders/unlitSprite/: frag.glsl
src/: .clangd  main.cpp
src/Buffer/: Buffer.cpp  Buffer.h
src/Global/: Scene.cpp  Scene.h
src/Meshes/: ManualMesh.cpp  ManualMesh.h
src/Objects/: Drawable.h
src/Renderer/: Renderable.h  Renderer.cpp  Renderer.h
src/Shaders/: Material.h  ShaderProgram.cpp  ShaderProgram.h
src/Textures/: FrameBuffer.cpp  FrameBuffer.h  Texture.cpp  Texture.h
